10/24/10 show absolute values in field detector, with no comma in numbers
10/24/10 model for detector vectors: 0 outside plates, either air or dielectric inside plates
# 0.00.34 (45344) Oct 22, 2010
10/22/10 dev version for discussion with Noah P.
10/21/10 demonstrate dielectric gap = 0
10/21/10 revert BatteryCapacitorCircuit.get*At methods for demo
10/21/10 another attempt at BatteryCapacitorCircuit.get*At methods, still need specs
10/21/10 add method for determining if a point is inside dielectric
# 0.00.33 (45314) Oct 21, 2010
10/21/10 dev version for discussion with Noah P.
10/21/10 simplified field detector for Introduction tab (hide vector check boxes, show only Plate vector)
10/21/10 make "Show Values" its own PSwing so that it will always be at lower-left of field detector 
10/21/10 try a simplified naming scheme for string keys, hopefully easier for translators
10/21/10 i18n of vector labels in E-field detector
10/21/10 snapshot of design doc in SVN, for working offline
10/20/10 add vectors to E-field detector
10/19/10 derive negative orientation of current indicator
10/19/10 remove polarity from current indicator, it was misused here
10/19/10 add polarity property to battery
10/18/10 add E-field detector to model, using Property<T> notification
10/18/10 add stubs to BatteryCapacitorCircuit for determining E-field at a Point3D
10/13/10 properly initialize "Show Values" in field detector
10/12/10 add vector values to field detector, wire up to controls
10/12/10 add wire that connects field detector probe to meter
10/12/10 put components of field detector directly on the canvas, so that their locations can be adjusted independently as the canvas size changes
10/12/10 provide PNode interface to meters control panel, specific type of meter doesn't need to be known
10/12/10 enable voltmeter check box for development
10/12/10 decided not to update bar meters only when they are visible, not worth it (insignificant performance gain, significant code complication)