@@ -10,7 +10,6 @@ DESIGN ISSUES
 
 HIGH PRIORITY
 - chose a more appropriate max for detector vectors
-- remove dielectric gap from model
 - center labels and values above/below tails of detector vectors, labels above values
 - add E-field model inside the battery? (V_battery / d_battery, where d_battery is battery length, 10mm)
 - add zoom button to E-field detector (necessary after choosing a better max?)
